multiple assignment
