# lab01/server/api/openapi.yaml
@@ -145,35 +145,7 @@ paths:
           description: Task not found
           content: {}
       x-swagger-router-controller: Tasks
-    delete:
-      tags:
-      - tasks
-      summary: 'Remove assignee '
-      description: Remove the assignation of the task
-      operationId: removeAssignee
-      parameters:
-      - name: tid
-        in: path
-        description: Task id used to remove the assign from it
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: number
-      responses:
-        "200":
-          description: Successfully removed the assignation of that task
-          content: {}
-        "400":
-          description: Bad request
-          content: {}
-        "401":
-          description: Not authorized to delete the assignee
-          content: {}
-        "404":
-          description: Task not found
-          content: {}
-      x-swagger-router-controller: Tasks
+    
   /tasks/{tid}/assignees/{uid}:
     post:
       tags:
@@ -210,6 +182,43 @@ paths:
           content: {}
         "401":
           description: Not authorized to assign the task
+          content: {}
+        "404":
+          description: Task not found
+          content: {}
+      x-swagger-router-controller: Tasks
+    delete:
+      tags:
+      - tasks
+      summary: 'Remove assignee '
+      description: Remove the assignation of the task identified by tid from the user identified by uid
+      operationId: removeAssignee
+      parameters:
+      - name: tid
+        in: path
+        description: Task id used to remove the assign from it
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: number
+      - name: uid
+        in: path
+        description: User id used to remote the assignment from task
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: number
+      responses:
+        "200":
+          description: Successfully removed the assignation of that task
+          content: {}
+        "400":
+          description: Bad request
+          content: {}
+        "401":
+          description: Not authorized to delete the assignee
           content: {}
         "404":
           description: Task not found
@@ -427,8 +436,10 @@ components:
           type: string
           format: uri
         assignees:
-          type: string
-          format: uri
+          type: array
+          items:
+            type: string
+            format: uri
         self:
           type: string
           format: uri
