# lab01/server/index.js
@@ -125,13 +125,13 @@ app.post('/api/login', checkSchema(UserSchema), function (req, res, next) {
 // Check if credentials are correct and check them in the db
 
 
-app.post("/api/hello", checkSchema(TaskSchema), validateMiddleware, passport.authenticate('jwt', { session: false }), (req, res, next) => {
+app.get("/api/hello", passport.authenticate('jwt', { session: false }), (req, res, next) => {
   //console.log(req.body);
   // console.log(validationResult(req))
   req.params.id = 1;
-  taskController.getTaskById(req, res, next);
+  // taskController.getTaskById(req, res, next);
 
-  // return res.json({ "msg": "If you see this message you are authenticated with JWT" })
+  return res.json({ "msg": "If you see this message you are authenticated with JWT" })
 })
 app.get("/api/assignees", passport.authenticate('jwt', { session: false }), userController.getAssignedTasks);
 app.get("/api/tasks", query('private').isBoolean().customSanitizer(value => {
@@ -140,13 +140,13 @@ app.get("/api/tasks", query('private').isBoolean().customSanitizer(value => {
   if (value) return 1; else return 0;
 }).optional(), query('completed').isBoolean().customSanitizer(value => {
   if (value) return 1; else return 0;
-}).optional(), validateMiddleware, taskController.getTasks);
+}).optional(), validateMiddleware, passport.authenticate('jwt', { session: false }), taskController.getTasks);
 app.get("/api/tasks/:id", param('id').isInt(), validateMiddleware, passport.authenticate('jwt', { session: false }), taskController.getTaskById);
 app.post("/api/tasks", checkSchema(TaskSchema), validateMiddleware, passport.authenticate('jwt', { session: false }), taskController.createTask);
 app.delete("/api/tasks/:id", param('id').isInt(), validateMiddleware, passport.authenticate('jwt', { session: false }), taskController.deleteTaskById);
 app.put("/api/tasks/:id", param('id').isInt(), validateMiddleware, checkSchema(TaskSchema), validateMiddleware, passport.authenticate('jwt', { session: false }), taskController.updateTask);
 app.post("/api/tasks/:tid/assignees/:uid", param('tid').isInt(), param('uid').isInt(), validateMiddleware, passport.authenticate('jwt', { session: false }), taskController.assignTask);
-app.delete("/api/tasks/:tid/assignees", param('tid').isInt(), validateMiddleware, passport.authenticate('jwt', { session: false }), taskController.removeAssignee);
+app.delete("/api/tasks/:tid/assignees/:uid", param('tid').isInt(), param('uid').isInt(), validateMiddleware, passport.authenticate('jwt', { session: false }), taskController.removeAssignee);
 app.put("/api/tasks/:tid/assignees", param('tid').isInt(), validateMiddleware, passport.authenticate('jwt', { session: false }), taskController.markComplete);
 app.get("/api/tasks/:tid/assignees", param('tid').isInt(), validateMiddleware, passport.authenticate('jwt', { session: false }), taskController.getAssigneeTask);
 http.createServer(app).listen(serverPort, function () {
